# Robotics

./: README.md  move-box.sh
src/PubAndSub/: CMakeLists.txt
src/PubAndSub/src/scripts/: pub.py
src/arm_description/: package.xml
src/arm_description/models/: model.config  model.sdf
src/arm_gazebo/: CMakeLists.txt  package.xml
src/arm_gazebo/msg/: UpdateGripper.msg
src/arm_gazebo/scripts/: ik.py
src/arm_gazebo/src/: controller.cpp  modelController.cpp
src/arm_gazebo/srv/: fk.srv  ik.srv
src/pub_sub/: package.xml
src/pub_sub/msg/: Inputmsg.msg
src/pub_sub/src/: pub.cpp  sub.cpp
src/pub_sub/src/scripts/: sub.py
